# Cairn

./: .gitignore  ANNOUNCEMENT.md  CHANGELOG.md  CHECKLIST.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PAPER.md  README.md  REPRODUCE.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  _bootstrap.py  ablation_study.py  cross_version_resume.py  live_study.py  recovery_matrix.py  run_m3_study.py  scenarios.py
benchmarks/transcripts/: llama-3.3-70b-versatile-chain-study.jsonl  llama-3.3-70b-versatile-chain-study.manifest.json  nvidia_nemotron-3-super-120b-a12b_free-chain-study.jsonl  nvidia_nemotron-3-super-120b-a12b_free-chain-study.manifest.json  openai_gpt-4o-mini-chain-study.manifest.json  openai_gpt-oss-120b-chain-study.jsonl  openai_gpt-oss-120b-chain-study.manifest.json  openrouter_owl-alpha-recovery-study.jsonl
docs/: README.md
docs/adr/: ADR-0001-foundational-decisions.md  ADR-0002-continuation-state-shape.md  ADR-0003-boundary-contract.md  ADR-0004-regrounding-not-replay.md  ADR-0005-unified-distillation.md  ADR-0006-effect-safety-wal.md  ADR-0007-implementation-stack.md  ADR-0008-recovery-v1-implementation.md  (+3 more)
examples/: byom_recovery.py  quickstart.py  recovery_demo.py
src/: README.md
tests/: README.md  conftest.py  test_agent.py  test_agent_loop.py  test_checkpoint_snapshot_restart.py  test_checkpoint_store.py  test_distill.py  test_effect_ledger.py  test_effects.py  test_eval_ablation.py  test_eval_chain.py  test_eval_cross_version.py  test_eval_effect_safety.py  test_eval_injection.py  test_eval_matrix.py  test_eval_metrics.py  test_eval_repetition.py  test_eval_tax_fairness.py  test_example_byom.py  test_live_controls.py  test_live_study.py  test_model_live.py  test_public_api_contract.py  test_public_exports.py  test_reconcile.py  test_recovery_e2e.py  test_recovery_primitives.py  test_sandbox.py  test_state.py  test_workspace.py  test_world_contracts.py
(+138 files in other folders)
