[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn"
version = "0.2.0"
description = "Recoverable long-horizon agents — reference harness + recovery-faithful live benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
# Live-LLM validation (Milestone M1) — optional; core + CI never need it.
live = ["anthropic>=0.40"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
